@@ -59,8 +59,8 @@ namespace octave
     symbol_info (const std::string& name, const octave_value& value,
                  bool is_formal, bool is_global, bool is_persistent)
       : m_name (name), m_value (value), m_is_complex (value.iscomplex ()),
-        m_is_formal (is_formal), m_is_global (is_global),
-        m_is_persistent (is_persistent)
+        m_is_sparse (value.issparse ()), m_is_formal (is_formal),
+        m_is_global (is_global), m_is_persistent (is_persistent)
     { }
 
     std::string name (void) const { return m_name; }
@@ -68,6 +68,8 @@ namespace octave
     octave_value value (void) const { return m_value; }
 
     bool is_complex (void) const { return m_is_complex; }
+
+    bool is_sparse (void) const { return m_is_sparse; }
 
     bool is_formal (void) const { return m_is_formal; }
 
@@ -82,6 +84,7 @@ namespace octave
     std::string m_name;
     octave_value m_value;
     bool m_is_complex;
+    bool m_is_sparse;
     bool m_is_formal;
     bool m_is_global;
     bool m_is_persistent;
